--- a/src/assets/scss/_experience.scss
+++ b/src/assets/scss/_experience.scss
@@ -9,7 +9,7 @@
         margin-bottom: 2rem;
     }
     .experience-item {
-        height: 600px;
+        height: 450px;
         box-sizing: border-box;
         border: 1px solid #fff;
         position: relative;
@@ -30,13 +30,12 @@
             width: 100%;
             background: rgba(0, 0, 0, 0.3);
             display: flex;
-            h3 {
+            h3,h4 {
                 color: #fff;
                 bottom: 0;
                 align-self: flex-end;
                 margin-bottom: 2rem;
-                font-weight: bold;
-                text-align: center;
+                font-weight: 500;
                 margin-left: 2rem;
             }
             transition: all 0.4s;
