--- a/src/assets/scss/_room-suites.scss
+++ b/src/assets/scss/_room-suites.scss
@@ -1,40 +1,52 @@
 .room-title-block {
-  padding: 3rem 0;
+  padding: 1rem 0;
   text-align: center;
   h1,
   h2 {
     color: #11595c;
     font-family: "Lora", serif;
     margin-bottom: 2rem;
+    @media #{$sm} {
+      font-size: 40px;
+    }
   }
   p {
     color: #11595c;
     font-weight: 500;
     line-height: 30px;
+    @media #{$sm} {
+      padding: 0 1rem;
+      // text-align: justify;
+    }
   }
 }
 .room-suite-grid-title {
   text-align: center;
-  color: #11595c;
+  color: $text-color;
   font-family: "Lora", serif;
+  font-style: italic;
+  font-size: 36px;
 }
 
 .room-suite-grid-wrapper {
-  padding-top: 3rem;
+  padding-top: 2rem;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
+  @media #{$sm} {
+    padding-top: 0.5rem;
+  }
   .room-grid-item-wrapper {
-    padding: 2rem;
+    padding: 0.75rem;
     max-width: 50%;
     min-width: 50%;
     display: inline-block;
-    margin: 2rem auto;
+    // margin: 2rem auto;
     @media #{$sm} {
       max-width: 100%;
       min-width: 100%;
-      padding: 1rem;
-      margin: 1rem auto;
+      padding: 0.75rem;
+      // margin: 1rem auto;
     }
     .grid-item {
       box-shadow: 0 0 8px #dadada;
@@ -44,6 +56,9 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
+        @media #{$sm} {
+          height: 250px;
+        }
         h3,
         h4 {
           color: $white;
@@ -61,10 +76,12 @@
         }
       }
       .room-description {
+        padding: 0.5rem;
         p {
           color: #11595c;
           font-weight: 500;
           margin: 0.5rem auto;
+          font-size: 14px;
         }
         button {
           line-height: 30px;
@@ -87,8 +104,8 @@
   .form-control {
     padding-left: 10px !important;
   }
-  .input-group-append{
-    button{
+  .input-group-append {
+    button {
       background-color: #11595c;
       color: $white;
     }
